# astro-provider-venv

./: .astro-registry.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: check-version.py
.github/actions/setup-env/: action.yml
.github/workflows/: buildkit.yml  lint.yml  provider.yml
buildkit/: Dockerfile  Makefile  README.md  go.mod  go.sum
buildkit/cmd/astro-runtime-frontend/: main.go
buildkit/internal/dockerfile/: dockerfile.go
buildkit/internal/frontend/: build.go
buildkit/internal/render/: render.go  render_test.go
buildkit/internal/transform/: transforms.go  transforms_test.go
example_dags/: sample-dag.py
sample_provider/example_dags/: sample-dag.py
sample_provider/operators/: sample_operator.py
tests/: conftest.py  test_decorators.py  test_example_dags.py
tests/operators/: test_sample_operator.py
